--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,515 @@
 <!doctype html>
-<html lang="en">
+<html
+  lang="en"
+  class="page"
+>
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
+    <link
+      rel="shortcut icon"
+      href="images/logo/logo.svg"
+      type="image/x-icon"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./styles/style.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__bg"></div>
+      <div class="container">
+        <div class="header__content">
+          <a
+            href="#menu"
+            class="header__menu-button"
+          >
+            <span class="header__menu-button-line"></span>
+          </a>
+          <div class="header__top">
+            <a
+              href="#"
+              class="header__logo-link logo-link"
+            >
+              <img
+                src="images/logo/logo.svg"
+                alt="logo"
+                class="header__logo logo"
+              />
+            </a>
+          </div>
+          <div class="header__bottom">
+            <h1 class="header__title">
+              Художній
+              <br />
+              музей
+            </h1>
+            <a
+              href="#events"
+              class="header__button"
+            >
+              Квитки
+            </a>
+            <a
+              href="#events"
+              class="header__events"
+            >
+              Події
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a
+              href="#"
+              class="menu__close-btn"
+            ></a>
+            <nav class="menu__nav nav">
+              <ul class="nav__list menu__nav-list">
+                <li class="nav__item menu__nav-item">
+                  <a
+                    href="#gallery"
+                    class="nav__link menu__nav-link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+
+                <li class="nav__item menu__nav-item">
+                  <a
+                    href="#subscription"
+                    class="nav__link menu__nav-link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+
+                <li class="nav__item menu__nav-item">
+                  <a
+                    href="#events"
+                    class="nav__link menu__nav-link"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+
+                <li class="nav__item menu__nav-item">
+                  <a
+                    href="#contacts"
+                    class="nav__link menu__nav-link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="menu-schedule schedule">
+            <div class="schedule__top menu-schedule__top">
+              <h5 class="schedule__title menu-schedule__title">
+                Графік роботи
+              </h5>
+              <ul class="schedule__list menu-schedule__list">
+                <li class="schedule__item">
+                  <span class="schedule__item--bold menu-schedule__item--bold">
+                    12:00 - 20:00
+                  </span>
+                  середа
+                </li>
+
+                <li class="schedule__item">
+                  <span class="schedule__item--bold menu-schedule__item--bold">
+                    12:00 - 20:00
+                  </span>
+                  четвер
+                </li>
+
+                <li class="schedule__item">
+                  <span class="schedule__item--bold menu-schedule__item--bold">
+                    12:00 - 20:00
+                  </span>
+                  п'ятниця
+                </li>
+
+                <li class="schedule__item">
+                  <span class="schedule__item--bold menu-schedule__item--bold">
+                    11:00 - 19:00
+                  </span>
+                  субота
+                </li>
+
+                <li class="schedule__item">
+                  <span class="schedule__item--bold menu-schedule__item--bold">
+                    11:00 - 19:00
+                  </span>
+                  неділя
+                </li>
+              </ul>
+            </div>
+            <div class="schedule__bottom menu-schedule__bottom">
+              <p class="schedule__description menu-schedule__description">
+                Вихідні понеділок, вівторок
+              </p>
+
+              <p class="schedule__description menu-schedule__description">
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <main class="main">
+      <section
+        class="events"
+        id="events"
+      >
+        <div class="container">
+          <h2 class="events__title">Актуальні події</h2>
+          <article class="events__item card">
+            <img
+              src="images/events/img1.jpg"
+              alt="picture"
+              class="card__img"
+            />
+            <div class="card__content">
+              <div class="card__inner">
+                <h4 class="card__date-title">Виставка</h4>
+                <div class="card__date">26.08-29.11.2019</div>
+              </div>
+              <h3 class="card__title">Йду і повертаюсь</h3>
+              <p class="card__description">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </p>
+            </div>
+          </article>
+
+          <article class="events__item card">
+            <img
+              src="images/events/img2.jpg"
+              alt="picture"
+              class="card__img"
+            />
+            <div class="card__content">
+              <div class="card__inner">
+                <h4 class="card__date-title">Виставка</h4>
+                <div class="card__date">26.08-29.11.2019</div>
+              </div>
+              <h3 class="card__title">І спогади і мрії</h3>
+              <p class="card__description">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </article>
+
+          <article class="events-bottom">
+            <img
+              src="images/events/img3.jpg"
+              alt="picture"
+              class="events-bottom__img"
+            />
+            <div class="events-bottom__content">
+              <div class="events-bottom__inner">
+                <h4 class="card__date-title events-bottom__date-title">
+                  Лекція
+                </h4>
+                <div class="card__date events-bottom__date">
+                  26/08/2019 - 11:00
+                </div>
+              </div>
+              <h3 class="events-bottom__title">Від класицизму до романтизму</h3>
+            </div>
+          </article>
+        </div>
+      </section>
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  src="images/slider/img-1.jpg"
+                  alt="gallery img"
+                  class="swiper-img"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="images/slider/img-2.jpg"
+                  alt="gallery img"
+                  class="swiper-img"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="images/slider/img-3.jpg"
+                  alt="gallery img"
+                  class="swiper-img"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="images/slider/img-4.jpg"
+                  alt="gallery img"
+                  class="swiper-img"
+                />
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+      <section
+        class="subscription"
+        id="subscription"
+      >
+        <div class="container">
+          <div class="subscription__content">
+            <h2 class="subscription__title">Підписка</h2>
+            <p class="subscription__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              action="#"
+              class="subscription__form form"
+              onsubmit="this.reset(); return false"
+            >
+              <input
+                name="email"
+                type="email"
+                class="form__email"
+                placeholder="E-mail"
+                required
+              />
+              <button
+                class="form__btn"
+                type="submit"
+              ></button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__top">
+          <div class="footer__icons">
+            <a
+              href="#"
+              class="footer__logo-link logo-link"
+            >
+              <img
+                src="images/logo/logo.svg"
+                alt="logo"
+                class="footer__logo logo"
+              />
+            </a>
+            <div class="footer__social">
+              <a
+                href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                target="_blank"
+                class="footer__social-link footer__social-link--facebook"
+              ></a>
+
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                target="_blank"
+                class="footer__social-link footer__social-link--instagram"
+              ></a>
+            </div>
+          </div>
+          <div class="footer-schedule schedule">
+            <div class="schedule__top footer-schedule__top">
+              <h5 class="schedule__title footer-schedule__title">
+                Графік роботи
+              </h5>
+              <ul class="schedule__list">
+                <li class="schedule__item">
+                  <span
+                    class="schedule__item--bold footer-schedule__item--bold"
+                  >
+                    12:00 - 20:00
+                  </span>
+                  середа
+                </li>
+
+                <li class="schedule__item">
+                  <span
+                    class="schedule__item--bold footer-schedule__item--bold"
+                  >
+                    12:00 - 20:00
+                  </span>
+                  четвер
+                </li>
+
+                <li class="schedule__item">
+                  <span
+                    class="schedule__item--bold footer-schedule__item--bold"
+                  >
+                    12:00 - 20:00
+                  </span>
+                  п'ятниця
+                </li>
+
+                <li class="schedule__item">
+                  <span
+                    class="schedule__item--bold footer-schedule__item--bold"
+                  >
+                    11:00 - 19:00
+                  </span>
+                  субота
+                </li>
+
+                <li class="schedule__item">
+                  <span
+                    class="schedule__item--bold footer-schedule__item--bold"
+                  >
+                    11:00 - 19:00
+                  </span>
+                  неділя
+                </li>
+              </ul>
+            </div>
+            <div class="schedule__bottom footer-schedule__bottom">
+              <p class="schedule__description">Вихідні понеділок, вівторок</p>
+
+              <p class="schedule__description">
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+          <div
+            class="footer__contacts contacts"
+            id="contacts"
+          >
+            <h5 class="contacts__title">Контакти:</h5>
+            <a
+              href="https://maps.app.goo.gl/J3CdLP494i49ZxAA8"
+              class="contacts__link"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <div class="contacts__item">
+              тел.
+              <a
+                href="tel:+380442781357"
+                class="contacts__link"
+              >
+                +38 (044) 278-13-57
+              </a>
+            </div>
+
+            <div class="contacts__item">
+              факс
+              <a
+                href="tel:+380442787454"
+                class="contacts__link"
+              >
+                +38 (044) 278-74-54
+              </a>
+            </div>
+
+            <div class="contacts__item">
+              e-mail:
+              <a
+                href="email:info@namu.kiev.ua"
+                class="contacts__link"
+              >
+                info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+          <a
+            href="#"
+            class="footer__up"
+          ></a>
+          <nav class="footer__nav nav">
+            <ul class="nav__list footer__nav-list">
+              <li class="nav__item footer__nav-item">
+                <a
+                  href="#gallery"
+                  class="nav__link footer__nav-link"
+                >
+                  Галерея
+                </a>
+              </li>
+
+              <li class="nav__item footer__nav-item">
+                <a
+                  href="#subscription"
+                  class="nav__link footer__nav-link"
+                >
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="nav__item footer__nav-item">
+                <a
+                  href="#events"
+                  class="nav__link footer__nav-link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+
+              <li class="nav__item footer__nav-item">
+                <a
+                  href="#contacts"
+                  class="nav__link footer__nav-link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer__bottom">
+          <div class="footer__author">Designed by Zhyriada Marina</div>
+          <div class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
