--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
